# disperse

./: .codespellrc  .flake8  .gitignore  .mcp.json  Cargo.toml  Dockerfile  Makefile  README.mcp.md  README.md  build.rs  config.proto  disperse.conf  disperse.conf.example  disperse.service  disperse.toml  disperse.toml.example  limmat.toml  pyproject.toml  releaser.conf  releaser.conf.example  releaser.service  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: container.yml  pythonpackage.yml  rust.yml
disperse/: __init__.py  __main__.py  _disperse_rs.pyi  cargo.py  config.proto  config.py  github.py  launchpad.py  news_file.py  project_config.py  python.py
disperse-py/: Cargo.toml
disperse-py/src/: lib.rs
disperse/tests/: __init__.py
notes/: architecture.txt  autodetect.txt  pitch.txt
releaser/: __init__.py  __main__.py  config.proto  config.py  news_file.py
releaser/tests/: __init__.py
src/: cargo.rs  config.rs  custom.rs  github.rs  launchpad.rs  lib.rs  main.rs  manpage.rs  mcp.rs  news_file.rs  project_config.rs  python.rs  update_version.rs  version.rs
tests/: __init__.py  test_versions.py
