[package]
name = "disperse"
version = "0.0.10"
authors = [ "Jelmer Vernooĳ <jelmer@jelmer.uk>",]
edition = "2021"
description = "automation for creation of releases"
license = "GPL-3.0+"
repository = "https://github.com/jelmer/disperse.git"
homepage = "https://github.com/jelmer/disperse"
build = "build.rs"

[dependencies]
breezyshim = ">=0.1.101"
chrono = { workspace = true }
crates_io_api = "0.11.0"
lazy-regex = "3.3.0"
pyo3 = { workspace = true }
regex = "1.10.0"
shlex = "1.2.0"
toml_edit = "0.22.22"
protobuf = "3"
log = "0.4.20"
xmlrpc = "0.15.1"
reqwest = { version = "0.12", features = ["blocking"] }
url = "2.4.1"
serde_json = "1.0.128"
xdg = "2.5.2"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.15"
clap = { version = "4", features = ["env", "derive"], optional = true }
prometheus = { version = "0.13.3", features = ["reqwest", "push"] }
env_logger = { version = "0.11.5", optional = true }
silver-platter = { version = "0.5.39" }
#silver-platter = { git = "https://github.com/jelmer/silver-platter" }
maplit = "1.0.2"
lazy_static = "1.4.0"
octocrab = "0.41"
glob = "0.3.1"
launchpadlib = { version = "0.3.0", features = ["keyring", "api-v1_0"], default-features = false }
tokio = { version = "1", features = ["full"] }
keyring = "3.3.0"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"

[features]
default = ["cli", "pyo3"]
pyo3 = []
cli = ["dep:clap", "dep:env_logger"]

[workspace.dependencies]
pyo3 = { version = ">=0.20", features = ["serde"] }
chrono = "0.4.31"

[[bin]]
name = "disperse"
path = "src/bin/disperse.rs"
required-features = ["cli"]

[dev-dependencies]
tempfile = "3.13.0"
pyo3 = { features = ["auto-initialize"], version = "0.22" }
