[package]
name = "disperse"
version = "0.1.1"
authors = [ "Jelmer Vernooĳ <jelmer@jelmer.uk>",]
edition = "2021"
description = "automation for creation of releases"
license = "GPL-3.0+"
repository = "https://github.com/jelmer/disperse.git"
homepage = "https://github.com/jelmer/disperse"
build = "build.rs"

[dependencies]
breezyshim = "0.7"
chrono = { workspace = true }
crates_io_api = "0.12.0"
lazy-regex = "3.4.1"
pyo3 = { workspace = true }
regex = "1.11.1"
shlex = "1.2.0"
toml_edit = "0.23.3"
protobuf = "3"
log = "0.4.27"
xmlrpc = "0.15.1"
reqwest = { version = "0.12", features = ["stream"] }
url = "2.5.3"
serde_json = "1.0.141"
xdg = "3"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
clap = { version = "4", features = ["env", "derive"] }
prometheus = { version = "0.14.0", features = ["reqwest", "push"] }
env_logger = { version = "0.11.6" }
silver-platter = { version = "0.7.0", default-features = false }
maplit = "1.0.2"
lazy_static = "1.4.0"
octocrab = "0.47"
glob = "0.3.2"
launchpadlib = { version = "0.5.3", features = ["keyring", "api-v1_0", "async"], default-features = false }
#launchpadlib = { path = "../launchpadlib-rs", features = ["keyring", "api-v1_0", "async"], default-features = false }
tokio = { version = "1", features = ["full"] }
keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "linux-native"] }
futures = "0.3.31"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"

[features]
default = ["pyo3"]
pyo3 = []

[workspace.dependencies]
pyo3 = { version = "0.27", features = ["serde"] }
chrono = "0.4.41"

[[bin]]
name = "disperse"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.20.0"
pyo3 = { features = ["auto-initialize"], version = "0.27" }
