[metadata]
name = releaser
version = attr:releaser.__version__
author = Jelmer Vernooij
author_email = jelmer@jelmer.uk
url = https://github.com/jelmer/releaser
description = automation for creation of releases
project_urls =
    Repository=https://github.com/jelmer/releaser.git

[options]
packages =
    releaser
    releaser.tests
setup_requires =
    setuptools
    protobuf-setuptools
    protobuf>=2.4
install_requires =
    breezy
    protobuf>=2.4
    pygithub
    silver-platter@git+https://github.com/jelmer/silver-platter

[options.entry_points]
console_scripts =
    releaser=releaser.__main__:main

[mypy]
ignore_missing_imports = True

[flake8]
exclude = releaser/*_pb2.py
