[metadata]
name = disperse
version = attr:disperse.__version__
author = Jelmer Vernooij
author_email = jelmer@jelmer.uk
url = https://github.com/jelmer/disperse
description = automation for creation of releases
project_urls =
    Repository=https://github.com/jelmer/disperse.git

[options]
packages =
    disperse
    disperse.tests
setup_requires =
    setuptools
    protobuf-setuptools
    protobuf>=2.4
install_requires =
    breezy
    protobuf>=2.4
    pygithub
    silver-platter@git+https://github.com/jelmer/silver-platter

[options.entry_points]
console_scripts =
    disperse=disperse.__main__:main
    # backwards compatibility
    releaser=disperse.__main__:main

[mypy]
ignore_missing_imports = True

[flake8]
exclude = disperse/*_pb2.py
