[metadata]
name = disperse
version = attr:disperse.__version__
author = Jelmer Vernooij
author_email = jelmer@jelmer.uk
url = https://github.com/jelmer/disperse
description = automation for creation of releases
long_description = file:README.md
long_description_content_type = text/markdown
project_urls =
    Repository=https://github.com/jelmer/disperse.git

[options]
packages =
    disperse
    disperse.tests
setup_requires =
    setuptools
    setuptools-protobuf
    protobuf>=2.4
install_requires =
    breezy>=3.3.0.dev.0
    protobuf>=2.4
    pygithub
    silver-platter>=0.5.2
    build

[options.entry_points]
console_scripts =
    disperse=disperse.__main__:main
    # backwards compatibility
    releaser=disperse.__main__:main

[mypy]
ignore_missing_imports = True

[flake8]
exclude = disperse/*_pb2.py,build,.git
