[package]
name = "disperse-py"
version = "0.0.0"
authors = ["Jelmer Vernooĳ <jelmer@jelmer.uk>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/jelmer/disperse.git"
homepage = "https://github.com/jelmer/disperse"

[lib]
crate-type = ["cdylib"]

[dependencies]
breezyshim = "0.1.45"
chrono = { workspace = true }
disperse = { path = "..", features = ["pyo3"] }
pyo3 = { workspace = true, features = ["extension-module", "chrono"] }
